# ParseStudio

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  convert_files.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-docs.yml  ci-main.yml  ci.yml  markdown-link-check-config.json  publish-pypi.yml
docs/: index.md  installation.md  schemas.md
docs/parsers/: anthropic_parser.md  docling_parser.md  llama_parser.md  pymupdf_parser.md
installation/: index.html
parsers/docling_parser/: index.html
parsers/llama_parser/: index.html
parsers/pymupdf_parser/: index.html
parsestudio/: logging_config.py  parse.py
parsestudio/parsers/: anthropic_parser.py  docling_parser.py  llama_parser.py  openai_file_search_parser.py  openai_parser.py  openai_vision_parser.py  pymupdf_parser.py  schemas.py
parsestudio/parsers/templates/: openai_extraction.jinja
parsestudio/parsers/tools/: openai_extraction.json
parseval/parsers/: docling_parser.py  schema.py
parstudio/: parse.py
parstudio/parsers/: docling_parser.py  llama_parser.py  pymupdf_parser.py
schemas/: index.html
search/: search_index.json
tests/parsers/: test_anthropic_parser.py  test_docling_parser.py  test_llama_parser.py  test_openai_parser.py  test_pymupdf_parser.py
