[tool.poetry]
name = "parstudio"
version = "0.1.0"
description = ""
authors = ["Imene KOLLI <53266529+imene-swaan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
docling = "^2.5.2"
pymupdf = "^1.24.13"
llama-parse = "^0.5.14"
pytest = "^8.3.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
